# plane_detector

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: Detector.cfg  config_bag_2018-07-04.yaml  view_plane.cfg.rviz
include/plane_detector/: detected_plane.hpp  floor_detector.hpp  geometric_utilities.hpp  plane.hpp  plane_detector.hpp  plane_detector_ros.hpp  ros_detected_plane.hpp  wall_detector.hpp
launch/: floor_detection.launch  test.launch  test_floor.launch  wall_detection.launch
msg/: WallInfo.msg
src/: test_floor_detector.cpp  test_floor_detector_bag.cpp  test_plane.cpp  test_plane_detector.cpp  test_plane_detector_bag.cpp  test_plane_detector_standalone.cpp  test_plane_marker.cpp  test_wall_detector.cpp
test/: plane.txt  tf.txt  tf_2.txt  tf_3.txt  tf_array.txt  tf_new_siar.txt
